test/tests/compiler/18_structures/invalid_parse/extra_credit/two_union_kws.plx
type union u (a: i32)

pub x: union union u;  # can't use union keyword twice in a type specifier

pub fn main(none) i32 {
    return 0
}
